--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,7 +117,7 @@
 	background-color: #181b2d;
 }
 
-~[data-theme="dark"] .panel-heading {
+[data-theme="dark"] .panel-heading {
 	color: #9fc0e0;
 	background-color: #0e0f19;
 }
@@ -1205,21 +1205,6 @@ body {
 	.about1 {
 		margin: 0px 0px 20px 0px;
 		height: auto;
-	}
-
-	h2 {
-		font-family: 'Poppins', sans-serif;
-		font-weight: 800;
-		font-size: 2.5rem;
-		color: #091f2f;
-		//   text-transform: uppercase;
-	}
-
-	[data-theme="dark"] h2 {
-		font-family: 'Poppins', sans-serif;
-		font-weight: 800;
-		font-size: 2.5rem;
-		color: #e0e6ee;
 	}
 
 	.accordion-section .panel-default>.panel-heading {
